added chooseAliens, wher you can choose if you want to add aliens instead of astronauts after crafting phase